2002-09-03  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords.pm (comment): Add comment method

2002-08-16  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords/Elements.pm (_apparent): Add perturbation calculation 

	* lib/Astro/Coords.pm (dec&ra): Add J2000 RA&Dec for all modes.

2002-08-04  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm (usenow): Add usenow method

2002-08-03  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* t/basic.t: Test now works for orbital elements

	* lib/Astro/Coords/Elements.pm (new): Now support '1999 Apr 1.445' 
	format for Epoch

	* lib/Astro/Coords.pm (new): Add support for Interpolated coordinates

	* lib/Astro/Coords/Interpolated.pm: Create

	* lib/Astro/Coords.pm: Add name accessor method

